--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "10.0.9",
+    "@angular/cdk": "10.2.0",
     "@angular/common": "10.0.9",
     "@angular/compiler": "10.0.9",
     "@angular/core": "10.0.9",
     "@angular/fire": "6.0.2",
     "@angular/forms": "10.0.9",
+    "@angular/material": "^10.2.0",
     "@angular/platform-browser": "10.0.9",
     "@angular/platform-browser-dynamic": "10.0.9",
     "@angular/router": "10.0.9",
     "@firebase/app": "0.6.11",
-    "@fortawesome/fontawesome-free": "^5.14.0",
+    "@fortawesome/fontawesome-free": "5.14.0",
     "bootstrap": "4.5.2",
     "firebase": "7.20.0",
     "fontawesome": "4.7.0",
